--- a/jquery.knobby.light.css
+++ b/jquery.knobby.light.css
@@ -36,7 +36,7 @@
   height: 1em;
   left: 50%;
   top: 50%;
-  border: 1px solid #aaa;
+  border: 1px solid #bbb;
   margin-top: -0.5em;
   margin-left: -0.5em;
   border-radius: 100%;
