--- a/stylesheet/jquery.knobby.light.css
+++ b/stylesheet/jquery.knobby.light.css
@@ -12,7 +12,7 @@
   height: 8em;
   border-radius: 100%;
   overflow: hidden;
-  background: #dddddd;
+  background: #eeeeee;
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
